syntax = "proto3";

package game.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/game/v1;gamev1";

// Session represents a gameplay session within a campaign.
message Session {
  string id = 1;
  string campaign_id = 2;
  string name = 3;
  SessionStatus status = 4;
  google.protobuf.Timestamp started_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  google.protobuf.Timestamp ended_at = 7;
  int64 version = 8;
}

message SessionGate {
  string id = 1;
  string campaign_id = 2;
  string session_id = 3;
  string type = 4;
  SessionGateStatus status = 5;
  string reason = 6;
  google.protobuf.Timestamp created_at = 7;
  string created_by_actor_type = 8;
  string created_by_actor_id = 9;
  google.protobuf.Timestamp resolved_at = 10;
  string resolved_by_actor_type = 11;
  string resolved_by_actor_id = 12;
  google.protobuf.Struct metadata = 13;
  google.protobuf.Struct resolution = 14;
}

message SessionSpotlight {
  string campaign_id = 1;
  string session_id = 2;
  SessionSpotlightType type = 3;
  string character_id = 4;
  google.protobuf.Timestamp updated_at = 5;
  string updated_by_actor_type = 6;
  string updated_by_actor_id = 7;
}

enum SessionStatus {
  SESSION_STATUS_UNSPECIFIED = 0;
  SESSION_ACTIVE = 1;
  SESSION_ENDED = 2;
}

enum SessionGateStatus {
  SESSION_GATE_STATUS_UNSPECIFIED = 0;
  SESSION_GATE_OPEN = 1;
  SESSION_GATE_RESOLVED = 2;
  SESSION_GATE_ABANDONED = 3;
}

enum SessionSpotlightType {
  SESSION_SPOTLIGHT_TYPE_UNSPECIFIED = 0;
  SESSION_SPOTLIGHT_TYPE_GM = 1;
  SESSION_SPOTLIGHT_TYPE_CHARACTER = 2;
}

// SessionService manages session lifecycle.
service SessionService {
  // Start a new session for a campaign.
  // Enforces at most one ACTIVE session per campaign.
  rpc StartSession(StartSessionRequest) returns (StartSessionResponse);

  // List sessions for a campaign.
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);

  // Get a session by campaign ID and session ID.
  rpc GetSession(GetSessionRequest) returns (GetSessionResponse);

  // End a session by campaign ID and session ID.
  rpc EndSession(EndSessionRequest) returns (EndSessionResponse);

  // Open a gate that blocks action events until resolved.
  rpc OpenSessionGate(OpenSessionGateRequest) returns (OpenSessionGateResponse);

  // Resolve an open session gate.
  rpc ResolveSessionGate(ResolveSessionGateRequest) returns (ResolveSessionGateResponse);

  // Abandon an open session gate.
  rpc AbandonSessionGate(AbandonSessionGateRequest) returns (AbandonSessionGateResponse);

  // Get the current session spotlight.
  rpc GetSessionSpotlight(GetSessionSpotlightRequest) returns (GetSessionSpotlightResponse);

  // Set the session spotlight.
  rpc SetSessionSpotlight(SetSessionSpotlightRequest) returns (SetSessionSpotlightResponse);

  // Clear the session spotlight.
  rpc ClearSessionSpotlight(ClearSessionSpotlightRequest) returns (ClearSessionSpotlightResponse);

}

message StartSessionRequest {
  // The campaign ID to start a session for.
  string campaign_id = 1;

  // Optional free-form name for the session.
  string name = 2;
}

message StartSessionResponse {
  Session session = 1;
}

message ListSessionsRequest {
  // The campaign ID to list sessions for.
  string campaign_id = 1;

  // The maximum number of sessions to return.
  // If zero, the server defaults to 10. The server clamps values above 10 to 10.
  int32 page_size = 2;

  // A page token received from a prior ListSessionsResponse.
  string page_token = 3;
}

message ListSessionsResponse {
  repeated Session sessions = 1;
  string next_page_token = 2;
}

message GetSessionRequest {
  // The campaign ID.
  string campaign_id = 1;

  // The session ID.
  string session_id = 2;
}

message GetSessionResponse {
  Session session = 1;
}

message EndSessionRequest {
  // The campaign ID.
  string campaign_id = 1;

  // The session ID.
  string session_id = 2;
}

message EndSessionResponse {
  Session session = 1;
}

message OpenSessionGateRequest {
  string campaign_id = 1;
  string session_id = 2;
  string gate_type = 3;
  string reason = 4;
  string gate_id = 5;
  google.protobuf.Struct metadata = 6;
}

message OpenSessionGateResponse {
  SessionGate gate = 1;
}

message ResolveSessionGateRequest {
  string campaign_id = 1;
  string session_id = 2;
  string gate_id = 3;
  string decision = 4;
  google.protobuf.Struct resolution = 5;
}

message ResolveSessionGateResponse {
  SessionGate gate = 1;
}

message AbandonSessionGateRequest {
  string campaign_id = 1;
  string session_id = 2;
  string gate_id = 3;
  string reason = 4;
}

message AbandonSessionGateResponse {
  SessionGate gate = 1;
}

message GetSessionSpotlightRequest {
  string campaign_id = 1;
  string session_id = 2;
}

message GetSessionSpotlightResponse {
  SessionSpotlight spotlight = 1;
}

message SetSessionSpotlightRequest {
  string campaign_id = 1;
  string session_id = 2;
  SessionSpotlightType type = 3;
  string character_id = 4;
}

message SetSessionSpotlightResponse {
  SessionSpotlight spotlight = 1;
}

message ClearSessionSpotlightRequest {
  string campaign_id = 1;
  string session_id = 2;
  string reason = 3;
}

message ClearSessionSpotlightResponse {
  SessionSpotlight spotlight = 1;
}
